# celestrak-historical

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: celestrak.yml
raw-data/: tle-data.txt
