[project]
name = "celestrak-historical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "gitpython>=3.1.45",
    "pyorbital>=1.10.2",
    "skyfield>=1.53",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
